--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .container {
   align-items: center;
-  background-color: red;
+  background-color: gainsboro;
   display: flex;
   height: 100vh;
   justify-content: center;
