done: reload button to launch a new quizz

--- a/src/Quizz.css
+++ b/src/Quizz.css
@@ -69,6 +69,7 @@
     border-radius: 10px;
     color: #fff;
     font-size: 20px;
+    margin-bottom: 1rem;
     padding: 1rem;
     transition-duration: 200ms;
     width: 70%;
